add some picture to big-data/intro.tex

--- a/shared/latex/en/big-data/intro.tex
+++ b/shared/latex/en/big-data/intro.tex
@@ -1,44 +1,62 @@
 \begin{frame}{Ever increasing data}
-  Data is increasing exponentially~:
-  \begin{description}
-    \item[1990s] Public internet beginnings
-    \item[2000s] Social media, smartphones, …
-    \item[2010s] Video platforms, Internet of Things, …
-    \item[2020s] Connected cities \& cars, …
-  \end{description}
-\end{frame}
-
-\begin{frame}{Multiple-byte units}
-  \begin{description}
-    \item[kB] $10^3$B — kilobyte
-    \item[MB] $10^6$B — megabyte
-    \item[GB] $10^9$B — gigabyte
-    \item[TB] $10^{12}$B — terabyte
-    \item[PB] $10^{15}$B — petabyte
-    \item[EB] $10^{18}$B — exabyte
-    \item[ZB] $10^{21}$B — zettabyte
-    \item[YB] $10^{24}$B — yottabyte
-  \end{description}
+  \begin{columns}
+    \begin{column}{.65\textwidth}
+      \V{"img/internet-hosts-count" | image("tw", 1)}  
+    \end{column}
+    \begin{column}{.50\textwidth}
+      \begin{description}
+        \item[1990s] Public internet beginnings with 56K modem
+        \item[2000s] Smartphones, Social media, …
+        \item[2010s] Internet of Things, Video platforms, …
+        \item[2020s] Connected cities \& cars, …
+      \end{description}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Zettabyte era}
-  Entered during the mid-2010s~:
-  \begin{itemize}
-    \item Total IP traffic over 1ZB in 2016
-    \item Total data stored over 1ZB in 2012
-  \end{itemize}
+  \begin{columns}
+    \begin{column}{.48\textwidth}
+      Entered during the mid-2010s~:
+      \begin{itemize}
+        \item Total data stored over 1ZB in 2012
+        \item Total IP traffic over 1ZB in 2016
+      \end{itemize}
+    \end{column}
+    \begin{column}{.52\textwidth}
+      \begin{description}
+        \item[kB] $10^3$B — kilobyte
+        \item[MB] $10^6$B — megabyte
+        \item[GB] $10^9$B — gigabyte
+        \item[TB] $10^{12}$B — terabyte
+        \item[PB] $10^{15}$B — petabyte
+        \item[EB] $10^{18}$B — exabyte
+        \item[ZB] $10^{21}$B — zettabyte
+        \item[YB] $10^{24}$B — yottabyte
+      \end{description}
+    \end{column}
+  \end{columns}
 \end{frame}
 
-\begin{frame}{Data produced each day}
-  Sourced from Statista~:
-  \begin{itemize}
-    \item 500M+ tweets
-    \item 30k days of video uploaded to YouTube
-    \item 4.5B items shared on Facebook
-    \item 4TB produced by an autonomous car
-  \end{itemize}
+\begin{frame}{Data produced over time}
+  \begin{columns}
+    \begin{column}{.65\textwidth}
+      \V{"img/global-data-generated-annually" | image("tw", 1)}  
+    \end{column}
+    \begin{column}{.50\textwidth}
+      Every days~:
+      \begin{itemize}
+        \item 500M+ tweets
+        \item 30k days of video uploaded to YouTube
+        \item 4.5B items shared on Facebook
+        \item 4TB produced by an autonomous car
+      \end{itemize}
+    \end{column}
+  \end{columns}
+
 \end{frame}
 
+\mog{
 \begin{frame}{Data generated per year}
   For the years for which we have a good approximation~:
   \begin{description}
@@ -49,6 +67,7 @@
     \item[2021] 79ZB
   \end{description}
 \end{frame}
+}
 
 \begin{frame}{Importance of data}
   Three main axes~:
