bonus to sparks-formation/low

--- a/sparks-formation/low/latex/about/description.tex
+++ b/sparks-formation/low/latex/about/description.tex
@@ -1,25 +1,26 @@
 \begin{frame}{Description}
-  Formation très pratique axée sur le développement de l'autonomie pour assimiler les concepts de Python.
+  Formation très pratique axée sur le développement de l'autonomie 
+  pour assimiler les concepts de l'\textbf{algorithmie}.
 \end{frame}
 
 \begin{frame}{Prérequis}
   \begin{itemize}
-  \item Connaissance des bases de la programmation
-  \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
+    \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Objectifs Pédagogiques}
   \begin{itemize}
-    \item  Structurer des programmes selon un algorithme
-    \item  Maîtriser les éléments de lexique et de syntaxe d'un langage pour écrire un programme
-    \item  Exécuter un programme
-    \item  Déboguer et tester un programme
+    \item Analyser des problèmes simples et identifier des solutions algorithmiques
+    \item Créer des algorithmes basiques en utilisant des structures de contrôle standard : séquence, sélection, et itération
+    \item Traduire des algorithmes en code en utilisant un langage de programmation basique
+    \item Tester et déboguer des algorithmes
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Objectifs Pédagogiques}
   \begin{itemize} 
+    \item Connaître le lien entre algorithme et materiel
     \item Un programme informatique
     \item Genèse d'un premier programme
     \item Règles de programmation
@@ -27,7 +28,6 @@
     \item Opérateurs et expressions
     \item Les structures de contrôle
     \item Les procédures et les fonctions
-    \item Maintenance, débogage et test des programmes 
   \end{itemize}
 \end{frame}
 
