ça fait longtemps que j'ai pas commit...

--- a/shared/latex/tools/anaconda.tex
+++ b/shared/latex/tools/anaconda.tex
@@ -13,3 +13,19 @@
   \item S'installe facilement sous Windows, Mac et Linux
   \end{itemize}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Anaconda}
+  Installées avec \bluelink{https://docs.anaconda.com/anaconda/install/}{Anaconda} :
+  \begin{itemize}
+  \item Python
+  \item Jupyter Notebook
+  \item Des librairies de \og{}Data Science\fg{} :
+    \begin{itemize}
+    \item SciPy, Numpy
+    \item Pandas, seaborn
+    \item scikit-learn, statsmodels
+    \item Matplotlib
+    \end{itemize}
+  \end{itemize}
+\end{frame}
