maj sparks-formation/pds

--- a/sparks-formation/pds/latex/about/description.tex
+++ b/sparks-formation/pds/latex/about/description.tex
@@ -13,7 +13,7 @@
     \item Programmation objet
     \item Aide au développement
     \item \texttt{numpy}, \texttt{pandas} \& \texttt{matplotlib}
-    \item \texttt{scikit-image}
+    \item \texttt{scikit-learn}
   \end{itemize}
 \end{frame}
 
