Fix UML section; add INTRA/2024-09-THORE-DGA

--- a/stys/formation.sty
+++ b/stys/formation.sty
@@ -260,6 +260,12 @@
   \noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}\\%
 }
 
+% Strong highlight using alert
+\newcommand{\stronghl}[1]{%
+  \alert{\textbf{#1}}%
+  }
+
+
 \newcommand{\bluelink}[2]{%
   \href{%
     #1%
